# nearform-bmad-todo-app

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  launch.py  pyproject.toml
.github/workflows/: ci-backend.yml  ci-e2e.yml  ci-frontend.yml  release.yml
_bmad-output/implementation-artifacts/: 1-1-project-scaffolding-and-infrastructure.md  1-2-3d-pond-scene-with-water-surface.md  1-3-custom-neon-snake-cursor.md  1-4-empty-pond-state-and-design-system.md  1-5-deployment-and-e2e-readiness.md  2-1-backend-todo-crud-api.md  2-10-lily-pads-float-on-water.md  2-2-lily-pad-creation-the-drop.md  2-3-completion-egg-hatch-to-complete.md  2-3-completion-egg-hatch-to-complete.superseded.md  2-3-in-scene-action-popup.md  2-4-completion-via-popup-green-flash-and-dissolve.md  2-5-deletion-via-popup-red-flash-and-dissolve.md  2-6-loading-and-error-states.md  2-7-pulse-on-flash-polish.md  2-8-pad-action-glow-on-water.md  2-9-ripple-system-hardening.md  3-1-interactive-camera-controls.md  3-3-todo-visibility-via-slash-commands.md  3-4-lily-pad-info-popup.md  4-1-popup-color-swatch-neon-selector.md  4-2-lily-pad-drag-and-spread-out.md  4-6-lily-pad-clustering-and-groups.md  4-6-lily-pad-clustering-and-groups.superseded.md  4-7-selection-drag-and-repel.md  4-8-batch-position-endpoint.md  4-9-in-memory-world-state.md  5-1-backend-embedding-pipeline.md  5-2-hybrid-search-api.md  5-3-type-anywhere-search-with-surface-submerge.md  5-6-cluster-aware-search.md  5-6-cluster-aware-search.retired.md  6-1-agent-foundation.md  6-10-chat-composer-absorbs-todo-input.md  6-11-delete-todo-input.md  6-12-chat-suggested-actions.md  6-2-chat-panel.md  6-3-rephrase-skill.md  6-7-oracle-frog.md  6-8-create-todo-skill.md  (+3 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-14.md  implementation-readiness-report-2026-04-16.md  prd-validation-report.md  prd.md  sprint-change-proposal-2026-04-16.md  sprint-change-proposal-2026-04-23.md  ux-design-specification.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/src/: config.py  database.py  exceptions.py  main.py
backend/tests/: _safeguard.py  (+4 more)
docs/: ai-integration-log.md  custom-scrollbar-and-cursor.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+223 files in other folders)
