[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[project]
name = "hub-template-python"
version = "0.0.1"
description = "Your project description"
authors = [
  {name = "Your Name", email = "your.email@nearform.com"}
]
urls = {Homepage = "https://github.com/nearform/your-project"}
requires-python = ">=3.13"

readme = "README.md"

dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "mypy>=1.0.0",
  "ruff>=0.8.0",
  "pre-commit>=4.0.0"
]


[tool.bumpversion]
current_version = "0.0.1"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[tool.ruff]
line-length = 90
target-version = "py313"
exclude = [".claude", "_bmad", "_bmad-output", "backend/migrations/versions", "frontend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit
]

ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"backend/tests/*" = [
    "S101",  # asserts allowed in tests
]

[tool.ruff.format]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "backend.tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "mypy>=1.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]
